--- a/чернышевский_николай_гаврилович/vol02/2_662_686.md
+++ b/чернышевский_николай_гаврилович/vol02/2_662_686.md
@@ -90,7 +90,7 @@
 
 [^3]: Имеются в виду рецензия на книгу П. Медовикова «Историческое значение царствования Алексея Михайловича» (см. стр. 405  наст. тома) и рецензия на «Архив...» Калачова (стр. 369).
 
-До последнего времени между людьми, занимавшимися русскою историею и изучением русской народности, было очень мало ученых в истинном смысле слова. Эти отрасли знания возделывались у нас дилетантами, которые не могли удовлетворять не только требованиям нынешней, но и современной нм науки. Это известно каждому, кто коротко знаком с прежними трудами по нашей истории и собиранию памятников народности, но эта мысль, разделяемая всеми современными учеными, хотя высказываемая довольно редко, как видно, неизвестна автору статьи в «Отечественных Записках». Он, очевидно, предполагает, будто бы Карамзин может быть подвергаем такой же критике, как Шлёцер, Эверс или, чтобы упоминать о живых, г. Неволин, каждое слово которых имеет глубокое ученое значение; будто бы издания г. Снегирева могут быть подвергаемы такому разбору, как издания Гримма. Каждому специалисту известно, что это вовсе не нужно. Ясно ли теперь наше мнение? Если еще нет, то, к сожалению, мы должны отказаться от возможности выразиться еще прямее. Но пойдем далее; сообразив наши последующие слова с предыдущими, читатели увидят наше мнение еще точнее.
+До последнего времени между людьми, занимавшимися русскою историею и изучением русской народности, было очень мало ученых в истинном смысле слова. Эти отрасли знания возделывались у нас дилетантами, которые не могли удовлетворять не только требованиям нынешней, но и современной им науки. Это известно каждому, кто коротко знаком с прежними трудами по нашей истории и собиранию памятников народности, но эта мысль, разделяемая всеми современными учеными, хотя высказываемая довольно редко, как видно, неизвестна автору статьи в «Отечественных Записках». Он, очевидно, предполагает, будто бы Карамзин может быть подвергаем такой же критике, как Шлёцер, Эверс или, чтобы упоминать о живых, г. Неволин, каждое слово которых имеет глубокое ученое значение; будто бы издания г. Снегирева могут быть подвергаемы такому разбору, как издания Гримма. Каждому специалисту известно, что это вовсе не нужно. Ясно ли теперь наше мнение? Если еще нет, то, к сожалению, мы должны отказаться от возможности выразиться еще прямее. Но пойдем далее; сообразив наши последующие слова с предыдущими, читатели увидят наше мнение еще точнее.
 
 Каждый ученый, вступая в длинную полемику, должен выбрать себе противников, достойных серьезной ученой критики. Если бы г. Соловьев написал целые томы для обнаружения ошибок, встречаемых у Шлёцера, Эверса, г. Неволина, он занимался бы предметом, заслуживающим ученого внимания. Если бы г. Буслаев строго выставлял на вид малейшие ошибки, встречаемые в сборниках песен или пословиц, пользующихся славою истинно ученых изданий, он делал бы нечто нужное для науки. Но распространяться о каждой ошибочной букве в издании, которое, по общему признанию, не имеет ученого достоинства,— это труд совершенно излишний. Неужели, кто захочет трудиться для науки, может с самодовольствием тратить время на сражения с Хилковым, Щербатовым, Кайсаровым, Чулковым и проч.? Точно [# 676] так же понапрасну отвлекаются с поля науки ученые, нами названные, борьбою, которую мы не одобряем.
 
